    of an upgrade. Closes: #801156
  * Fix memory leaks in «dpkg --verify» and dpkg infodb format upgrade logic.
  * Merge all update-alternatives action handling into a single if-else-if
    block, to unify the code an allow a future switch into a shared library.
  * Perform any necessary cleanups on normal exit from dpkg-divert --add and
    --remove commands.
  * Build system:
    - Set PERL5LIB globally for the test suite to the local modules directory,
      to avoid using the system modules. Regression introduced in dpkg 1.17.8.
      Reported by Jérémy Bobbio <lunar@debian.org>. Closes: #801329
    - Use absolute buildir pathnames in PATH variable for the test suite.
    - Descend into scripts directory when cleaning up code coverage files.
    - Add new configure option --disable-devel-docs to select the kind of docs
      to generate, default for now is development documentation.
  * Documentation:
    - Move description for “target architecture” from the dpkg-architecture(1)
      ‘-A’ option to the TERMS section. Closes: #799046
    - Clarify that the md5sum check on «dpkg --verify» is performed on the
      file contents, and failures denote changed content. Closes: #760248
    - Document that dpkg-buildpacakge -nc -S implies -d.
    - Clarify role of Build-Depends in deb-src-control(5).
      Prompted by Johannes Schauer <j.schauer@email.de>.
    - Document supported feature areas.

  [ Updated programs translations ]
  * Dutch (Frans Spiesschaert). Closes: #800513
  * Japanese (Kenshi Muto). Closes: #799432
  * Turkish (Mert Dirik). Closes: #799875

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Mon, 21 Sep 2015 07:48:56 +0200

dpkg (1.18.3) unstable; urgency=medium

  [ Guillem Jover ]
  * Fix short-lived memory leaks in start-stop-daemon. As a side effect now
    a missing group after ‘:’ on --chuid is a fatal error.