@@ -13,6 +13,8 @@ dpkg (1.18.4) UNRELEASED; urgency=low
     block, to unify the code an allow a future switch into a shared library.
   * Perform any necessary cleanups on normal exit from dpkg-divert --add and
     --remove commands.
+  * Make dpkg-architecture warning on non-matching GNU system type compiler
+    agnostic.
   * Build system:
     - Set PERL5LIB globally for the test suite to the local modules directory,
       to avoid using the system modules. Regression introduced in dpkg 1.17.8.
